# my-etcd

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md
src/: main.cpp
src/common/: types.h
src/lease/: lease.cpp  lease.h
src/raft/: raft.cpp  raft.h  raft_log.cpp  raft_log.h  raft_node.h  tcp_transport.cpp  tcp_transport.h  transport.h
src/raft/common/: types.h
src/server/: etcd_server.cpp  etcd_server.h  http_handler.cpp  http_handler.h
src/snapshot/: snapshot.cpp  snapshot.h
src/storage/: backend.cpp  backend.h  kvstore.cpp  kvstore.h  mvcc.cpp  mvcc.h
src/wal/: wal.cpp  wal.h
src/watch/: watcher.cpp  watcher.h
tests/: conftest.py  pytest.ini  requirements.txt  run_tests.py  test_cluster.py  test_kv.py  test_lease.py  test_watch.py
tests/cpp/: minimal_test.h  test_backend.cpp  test_kvstore.cpp  test_lease.cpp  test_main.cpp  test_mvcc.cpp  test_raft.cpp  test_watch.cpp
